# byte

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  i2samp.sh  pyproject.toml  requirements.txt  setup.py
byte/: __init__.py  __main__.py  actions_dictionary.py  byte.py  dual_touch.py  sound_direction.py  trot.py  version.py  walk.py
docs/: README.md  index.md  search.md
docs/api/: robotdog.md
docs/examples/: basic.md
docs/guides/: ai-integration.md  debugging.md  faq.md  movement.md  quickstart.md  sensors.md  troubleshooting.md  voice.md
docs/installation/: compatibility.md  hardware.md  installation.md
docs/technical/: control.md  kinematics.md  specifications.md
mind/api/: README.md  action_flow.py  app.py  preset_actions.py  robotdog_client.py  utils.py
mind/gpt/: README.md  action_flow.py  gpt_dog.py  keys.py  openai_helper.py  preset_actions.py  utils.py
mind/offline/: README.md  action_flow.py  keys.py  local_llm_dog.py  preset_actions.py  utils.py
samples/advanced/: 11_keyboard_control.py  2_function_demonstration.py  6_be_picked_up.py  7_face_track.py  app_control.py  balance.py  ball_track.py  calibration.py  curses_utils.py  custom_actions.py  function_demonstration.py  howling.py  patrol.py  preset_actions.py  pushup.py  response.py  rest.py  servo_zeroing.py  wake_up.py
samples/demos/: 10_imu_read.py  11_sound_direction_read.py  13_camera_easy_use.py  5_stop_actions.py  6_do_preset_actions.py  7_sound_effect.py  9_rgb_control.py  dual_touch_read.py  head_control.py  legs_control.py  robotdog_init.py  sound_effect.py  tail_control.py  ultrasonic_read.py
samples/tests/: angry_bark.py  cover_photo.py  dual_touch_test.py  power_test.py  sound_direction_test.py  stand_test.py  ultrasonic_iic_test.py  ultrasonic_test.py
test/: imu_test.py  rgb_strip_test.py  tail.py  ultrasonic_test.py
