[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "robotdog"
dynamic = ["version"]
description = "A comprehensive quadruped robot control system for Raspberry Pi"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Matias Rodlo", email = "matias.rodlo@gmail.com"}
]
maintainers = [
    {name = "Matias Rodlo", email = "matias.rodlo@gmail.com"}
]
keywords = ["robotics", "quadruped", "robot", "raspberry pi", "GPIO", "servo", "control", "IMU", "sensor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Robotics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Hardware",
]
requires-python = ">=3.7"
dependencies = [
    "robot_hat>=2.0.0",
    "numpy>=1.19.0",
    "readchar>=2.0.0",
    "spidev>=3.5",
    "gpiozero>=1.6.0",
    "smbus2>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "black>=21.0.0",
    "flake8>=3.8.0",
]
docs = [
    "sphinx>=3.0.0",
    "sphinx-rtd-theme>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/matiasrodlo/byte"
Documentation = "https://github.com/matiasrodlo/byte#readme"
Repository = "https://github.com/matiasrodlo/byte"
"Bug Tracker" = "https://github.com/matiasrodlo/byte/issues"

[project.scripts]
robotdog = "byte:__main__"

[tool.setuptools]
packages = ["byte"]

[tool.setuptools.package-data]
byte = ["*.conf", "sounds/*"]

[tool.setuptools.dynamic]
version = {attr = "byte.version.__version__"}

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=byte --cov-report=term-missing" 